# nest

./: .gitignore  CLAUDE.md  NEST_ARCHITECTURE.md  TODO.md
catbird/: .env.example  Cargo.toml  Dockerfile  README.md
catbird/config/: default.toml
catbird/migrations/: 20260311000000_push_control_plane.down.sql  20260311000000_push_control_plane.up.sql  20260311100000_push_auth_revoked_tracking.down.sql  20260311100000_push_auth_revoked_tracking.up.sql  20260402000000_chat_poll.down.sql  20260402000000_chat_poll.up.sql
catbird/src/: error.rs  lib.rs  main.rs  metrics.rs
catbird/src/config/: mod.rs
catbird/src/handlers/: atproto.rs  chat_poll.rs  mod.rs  push.rs
catbird/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
catbird/src/models/: mod.rs  types.rs
catbird/src/routes/: atproto.rs  health.rs  mod.rs
catbird/src/services/: atproto_client.rs  crypto.rs  mls_auth.rs  mod.rs  oauth.rs  redis_auth_store.rs  redis_crypto.rs  ssrf.rs
catbird/src/services/chat_poll/: mod.rs  mute_sync.rs  poller.rs  rate_budget.rs  scheduler.rs  types.rs
catbird/src/services/push/: apns.rs  decision.rs  mod.rs  moderation_cache.rs  preferences.rs  queue.rs  registry.rs  subscriptions.rs  types.rs
catbird/tests/: integration_tests.rs
patches/jacquard-oauth/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
patches/jacquard-oauth/src/: atproto.rs  client.rs  dpop.rs  loopback.rs  request.rs  resolver.rs  scopes.rs  session.rs  types.rs
patches/jacquard-oauth/src/types/: client_metadata.rs  metadata.rs
