[package]
name = "catbird"
version = "0.1.0"
edition = "2021"
description = "Catbird Nest - A BFF Gateway for ATProto/Bluesky"
license = "MIT"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
tower_governor = "0.4"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }

# Atrium (AT Protocol)
atrium-api = { version = "0.25", features = ["default"] }
atrium-oauth = { version = "0.1.6", features = ["default"] }
atrium-common = "0.1"
atrium-identity = { version = "0.1", features = ["default", "doh-handle-resolver"] }
jose-jwk = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto for DPoP and Client Assertions
p256 = { version = "0.13", features = ["jwk", "ecdsa", "pkcs8"] }
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

# Session Storage
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
http = "1.0"
bytes = "1.0"
urlencoding = "2.1"
time = "0.3"

[dev-dependencies]
axum-test = "15"
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.18"
testcontainers-modules = { version = "0.6", features = ["redis"] }
